--- a/assets/styles/_utils.scss
+++ b/assets/styles/_utils.scss
@@ -9,3 +9,12 @@
 .text-blue {
   color: var(--blue);
 }
+
+.content {
+  width: 50vw;
+  width: clamp(16rem, 90vw, 50rem);
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
