--- a/assets/styles/globals.scss
+++ b/assets/styles/globals.scss
@@ -51,20 +51,11 @@ li {
   padding-left: 1.1rem;
 }
 
-.prose {
-  width: 50vw;
-  width: clamp(16rem, 90vw, 50rem);
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-
-  & p:first-of-type::first-letter {
-    font-size: 62px;
-    float: left;
-    line-height: 1;
-    padding-top: 12.8px;
-    padding-right: 4px;
-    color: var(--blue);
-  }
+.prose p:first-of-type::first-letter {
+  font-size: 62px;
+  float: left;
+  line-height: 1;
+  padding-top: 12.8px;
+  padding-right: 4px;
+  color: var(--blue);
 }
