fix: lighter white

--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -3,7 +3,7 @@
   --font-body: "Roboto", sans-serif;
 
   --blue: #264f7e;
-  --white: #edeae8;
+  --white: #fbfaf9;
   --black: #070600;
   --red: #b6244f;
 
