--- a/assets/styles/_fonts.scss
+++ b/assets/styles/_fonts.scss
@@ -4,6 +4,7 @@
     url("/fonts/montserrat-light-webfont.woff") format("woff");
   font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -12,6 +13,7 @@
     url("/fonts/montserrat-semibold-webfont.woff") format("woff");
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -20,6 +22,7 @@
     url("/fonts/roboto-bold-webfont.woff") format("woff");
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -28,4 +31,5 @@
     url("/fonts/roboto-regular-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
