--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -10,6 +10,14 @@
   --grid-height: clamp(50vh, 300px + 20vw, 70vh);
   --header-height: 4rem;
   --footer-height: calc(100vh - var(--grid-height) - var(--header-height));
+
+  --size-0: 0.85rem;
+  --size-1: 1rem;
+  --size-2: 1.1rem;
+  --size-3: 1.3rem;
+  --size-4: 2rem;
+  --size-5: 3rem;
+  --size-6: 3.875rem;
 }
 
 * {
