feat: better font sizes for small screens

--- a/assets/styles/globals.scss
+++ b/assets/styles/globals.scss
@@ -59,7 +59,7 @@ p {
   font-size: var(--size-6);
   float: left;
   line-height: 1;
-  padding-top: 12.8px;
+  padding-top: 0.21em;
   padding-right: 4px;
   color: var(--blue);
 }
