--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -20,6 +20,18 @@
   --size-6: 3.875rem;
 }
 
+@media screen and (max-width: 990px) {
+  :root {
+    --size-0: 0.7rem;
+    --size-1: 1rem;
+    --size-2: 1rem;
+    --size-3: 1rem;
+    --size-4: 1.5rem;
+    --size-5: 2rem;
+    --size-6: 3rem;
+  }
+}
+
 * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
