--- a/assets/styles/_fonts.scss
+++ b/assets/styles/_fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "Montserrat";
+  font-family: Montserrat;
   src: url("/fonts/montserrat-light-webfont.woff2") format("woff2"),
     url("/fonts/montserrat-light-webfont.woff") format("woff");
   font-weight: 300;
@@ -8,7 +8,7 @@
 }
 
 @font-face {
-  font-family: "Montserrat";
+  font-family: Montserrat;
   src: url("/fonts/montserrat-semibold-webfont.woff2") format("woff2"),
     url("/fonts/montserrat-semibold-webfont.woff") format("woff");
   font-weight: 600;
@@ -17,7 +17,7 @@
 }
 
 @font-face {
-  font-family: "Roboto";
+  font-family: Roboto;
   src: url("/fonts/roboto-bold-webfont.woff2") format("woff2"),
     url("/fonts/roboto-bold-webfont.woff") format("woff");
   font-weight: 700;
@@ -26,7 +26,7 @@
 }
 
 @font-face {
-  font-family: "Roboto";
+  font-family: Roboto;
   src: url("/fonts/roboto-regular-webfont.woff2") format("woff2"),
     url("/fonts/roboto-regular-webfont.woff") format("woff");
   font-weight: normal;
